framework/source/resource/qx/mobile/scss/common/_scroller.scss
.scroll {
  position:relative;
  overflow:hidden;
  height:100%;
}

// Bugfix for Blackberry Z10
.root.blackberry {
  .scroll {
    z-index: 0;
  }
}

.iscroll {
  width:100%;

  .content {
    padding-bottom: 10px;
  }
}

// Bugfix for Android 2.x, adds a scale(1) to the element,
// to enable to transform child elements.
.root.android.v2 .iscroll {
  @include transform(scale(1));
}

.scroll.native {
  @include touch-action(pan);

  overflow-y:scroll;
  overflow-x:scroll;
  
  -webkit-overflow-scrolling:touch;
  -ms-overflow-style: -ms-autohiding-scrollbar;
}

.scrollbarV > div {
  @include background-clip(padding-box);
  @include box-sizing(border-box);
  @include border-radius(rem(4));

  background-color: #888888;
  position: absolute;
  z-index: 100;
  width: 100%;

}

.scrollbarV {
  position: absolute;
  top: rem(2);
  right: rem(2);
  bottom: rem(2);
  width: rem(6);
  z-index: 100;

  margin-top: 0 !important;
}

